# builder

./: Cargo.toml  README.md  README.tpl  TODO.md
examples/: complex.rs  generic.rs  simple.rs
src/: builder.rs  field.rs  lib.rs
tests/ui/: default-repeat.fail.rs  default-repeat.fail.stderr  multiple-default-2.fail.rs  multiple-default-2.fail.stderr  multiple-default-3.fail.rs  multiple-default-3.fail.stderr  multiple-default.fail.rs  multiple-default.fail.stderr  repeat-default.fail.rs  repeat-default.fail.stderr  repeat-n-no-repeat.fail.rs  repeat-n-no-repeat.fail.stderr
