[package]
name = "bauer"
version = "0.1.0"
edition = "2024"
description = "A derive macro for automatically generating the builder pattern"
license = "Apache-2.0"
repository = "https://github.com/funnyboy-roks/bauer"
categories = ["rust-patterns", "development-tools"]
keywords = ["proc-macro", "builder", "derive-macro"]
rust-version = "1.85"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
convert_case = "0.9.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.111", features = ["extra-traits", "full"] }

[dev-dependencies]
trybuild = "1.0.114"
